@@ -1,6 +1,5 @@
 package org.cryptimeleon.incentive.client.integrationtest;
 
-import lombok.extern.slf4j.Slf4j;
 import org.cryptimeleon.craco.sig.sps.eq.SPSEQSignature;
 import org.cryptimeleon.incentive.client.dto.inc.BulkRequestDto;
 import org.cryptimeleon.incentive.client.dto.inc.EarnRequestDto;
@@ -28,11 +27,11 @@ import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
 /**
  * Test a full (correct) protocol flow.
  */
-@Slf4j
 @TestInstance(TestInstance.Lifecycle.PER_CLASS)
 public class FullWorkflowTest extends TransactionTestPreparation {
+    private static final org.slf4j.Logger log = org.slf4j.LoggerFactory.getLogger(FullWorkflowTest.class);
 
-    @BeforeAll()
+    @BeforeAll
     void setup() {
         prepareBasketServiceAndPromotions();
     }
@@ -40,11 +39,7 @@ public class FullWorkflowTest extends TransactionTestPreparation {
     @Test
     void joinTest() {
         Token token = joinPromotion();
-
-        var zeroPointsVector = RingElementVector.generate(
-                cryptoAssets.getPublicParameters().getBg().getZn()::getZeroElement,
-                testPromotion.getPromotionParameters().getPointsVectorSize()
-        );
+        var zeroPointsVector = RingElementVector.generate(cryptoAssets.getPublicParameters().getBg().getZn()::getZeroElement, testPromotion.getPromotionParameters().getPointsVectorSize());
         assertThat(token.getPoints()).isEqualTo(zeroPointsVector);
     }
 
@@ -53,10 +48,8 @@ public class FullWorkflowTest extends TransactionTestPreparation {
         var token = generateToken();
         var basket = createBasketWithItems();
         var basketValueForPromotion = testPromotion.computeEarningsForBasket(basket);
-
         log.info("Run valid credit earn protocol");
         Token newToken = runEarnProtocol(token, basket, basketValueForPromotion);
-
         Assertions.assertEquals(newToken.getPoints().map(RingElement::asInteger), basketValueForPromotion);
     }
 
@@ -66,10 +59,8 @@ public class FullWorkflowTest extends TransactionTestPreparation {
         var basketId = createBasket();
         assert basketId != null;
         log.info("BasketId: " + basketId);
-
         runSpendDeductWorkflow(token, basketId);
         var basketAfterSpend = basketClient.getBasket(basketId).block();
-
         assert basketAfterSpend != null;
         org.assertj.core.api.Assertions.assertThat(basketAfterSpend.getRewardItems()).hasSize(1).allMatch(rewardItemDto -> rewardItemDto.getId().equals(REWARD_ID));
     }
@@ -78,21 +69,14 @@ public class FullWorkflowTest extends TransactionTestPreparation {
         UUID basketId = basketClient.createBasket().block();
         basketClient.putItemToBasket(basketId, firstTestItem.getId(), 3).block();
         basketClient.putItemToBasket(basketId, secondTestItem.getId(), 1).block();
-
         var basketDto = basketClient.getBasket(basketId).block();
         assertThat(basketDto).isNotNull();
-        return new Basket(
-                basketDto.getBasketID(),
-                basketDto.getBasketItems().stream().map(i -> new BasketItem(i.getId(), i.getTitle(), i.getPrice(), i.getCount())).collect(Collectors.toList())
-        );
+        return new Basket(basketDto.getBasketID(), basketDto.getBasketItems().stream().map(i -> new BasketItem(i.getId(), i.getTitle(), i.getPrice(), i.getCount())).collect(Collectors.toList()));
     }
 
     private Token joinPromotion() {
         var joinTuple = incentiveSystem.generateJoinRequest(cryptoAssets.getProviderKeyPair().getPk(), cryptoAssets.getUserKeyPair());
-        var serializedJoinResponse = incentiveClient.sendJoinRequest(
-                testPromotion.getPromotionParameters().getPromotionId(),
-                jsonConverter.serialize(joinTuple.getJoinRequest().getRepresentation())
-        ).block(Duration.ofSeconds(1));
+        var serializedJoinResponse = incentiveClient.sendJoinRequest(testPromotion.getPromotionParameters().getPromotionId(), jsonConverter.serialize(joinTuple.getJoinRequest().getRepresentation())).block(Duration.ofSeconds(1));
         var joinResponse = new JoinResponse(jsonConverter.deserialize(serializedJoinResponse), cryptoAssets.getPublicParameters());
         return incentiveSystem.handleJoinRequestResponse(testPromotion.getPromotionParameters(), cryptoAssets.getProviderKeyPair().getPk(), joinTuple, joinResponse);
     }
@@ -100,27 +84,10 @@ public class FullWorkflowTest extends TransactionTestPreparation {
     private Token runEarnProtocol(Token token, org.cryptimeleon.incentive.promotion.model.Basket basket, org.cryptimeleon.math.structures.cartesian.Vector<java.math.BigInteger> basketValueForPromotion) {
         var earnRequest = incentiveSystem.generateEarnRequest(token, cryptoAssets.getProviderKeyPair().getPk(), cryptoAssets.getUserKeyPair());
         var serializedEarnRequest = jsonConverter.serialize(earnRequest.getRepresentation());
-        incentiveClient.sendBulkUpdates(basket.getBasketId(),
-                new BulkRequestDto(
-                        List.of(new EarnRequestDto(testPromotion.getPromotionParameters().getPromotionId(), serializedEarnRequest)),
-                        Collections.emptyList()
-                )
-        ).block();
-
+        incentiveClient.sendBulkUpdates(basket.getBasketId(), new BulkRequestDto(List.of(new EarnRequestDto(testPromotion.getPromotionParameters().getPromotionId(), serializedEarnRequest)), Collections.emptyList())).block();
         basketClient.payBasket(basket.getBasketId(), basket.computeBasketValue(), paySecret).block();
-
         var serializedSignature = incentiveClient.retrieveBulkResults(basket.getBasketId()).block().getEarnTokenUpdateResultDtoList().get(0).getSerializedEarnResponse();
-        var signature = new SPSEQSignature(
-                jsonConverter.deserialize(serializedSignature),
-                cryptoAssets.getPublicParameters().getBg().getG1(),
-                cryptoAssets.getPublicParameters().getBg().getG2());
-        return incentiveSystem.handleEarnRequestResponse(
-                testPromotion.getPromotionParameters(),
-                earnRequest,
-                signature,
-                basketValueForPromotion,
-                token,
-                cryptoAssets.getProviderKeyPair().getPk(),
-                cryptoAssets.getUserKeyPair());
+        var signature = new SPSEQSignature(jsonConverter.deserialize(serializedSignature), cryptoAssets.getPublicParameters().getBg().getG1(), cryptoAssets.getPublicParameters().getBg().getG2());
+        return incentiveSystem.handleEarnRequestResponse(testPromotion.getPromotionParameters(), earnRequest, signature, basketValueForPromotion, token, cryptoAssets.getProviderKeyPair().getPk(), cryptoAssets.getUserKeyPair());
     }
 }
